test/spec_vectors/elem/ok/module_34.wat
(module (func) (table 1 funcref) (elem declare funcref (ref.null func)))