test/spec_vectors/elem/fail/module_60.wat
(module (table 1 funcref) (elem (ref.null func)))